--- a/bpl-app/index.html
+++ b/bpl-app/index.html
@@ -92,6 +92,39 @@
                 padding: 15px;
             }
         }
+        /* Стили для ссылок */
+        a {
+            color: var(--accent-color);
+            text-decoration: none;
+            position: relative;
+            transition: color 0.3s ease;
+        }
+
+        a:hover {
+            color: var(--link-hover);
+            text-decoration: underline;
+        }
+
+        a:active {
+            color: #fff;
+            background: var(--accent-color);
+        }
+
+        a::after {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            bottom: -2px;
+            left: 0;
+            background: var(--accent-color);
+            transform: scaleX(0);
+            transition: transform 0.3s ease;
+        }
+
+        a:hover::after {
+            transform: scaleX(1);
+        }
     </style>
 </head>
 <body>
