--- a/index.html
+++ b/index.html
@@ -1,38 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <!-- Discord автоматически добавит SDK -->
-</head>
-<body>
-  <div id="root">Загрузка...</div>
-
-  <script nonce="ВАШ_NONCE">
-    // 1. Получите nonce из параметров Discord
-    const urlParams = new URLSearchParams(window.location.search);
-    const nonce = urlParams.get('nonce') || 'MTk5LDQ1LDE2NywxODMsMTExLDEsMTc5LDg1';
-
-    // 2. Динамически создайте тег скрипта с nonce
-    const script = document.createElement('script');
-    script.nonce = nonce;
-    script.src = 'https://sdk.discordapp.link/discord-sdk-2.0.0.js'; // Актуальная версия
-
-    // 3. Загрузите SDK
-    script.onload = async () => {
-      try {
-        const discordSdk = new DiscordSDK("1370033603878322238");
-        await discordSdk.ready();
-
-        // Ваш код Activity...
-      } catch (error) {
-        document.getElementById('root').textContent = `Ошибка: ${error.message}`;
-      }
-    };
-
-    script.onerror = () => {
-      document.getElementById('root').textContent = 'Ошибка загрузки SDK';
-    };
-
-    document.head.appendChild(script);
-  </script>
-</body>
-</html>
+<h1>Test</h1>
